--- a/tetris_puf/src/application/style.css
+++ b/tetris_puf/src/application/style.css
@@ -1,6 +1,14 @@
 .game-grid-cell {
     -fx-background-color: black;
     -fx-background-insets: 0 1 1 0 ;
-    -fx-border-color: white;
-    -fx-border-width: 1px;
+    -fx-border-color: grey;
+    -fx-border-width: 0.5px;
+}
+
+.nextUpBackground {
+    -fx-background-color: grey;
+}
+
+.pointsBackground {
+    -fx-background-color: white;
 }
