--- a/tetris_puf/src/application/style.css
+++ b/tetris_puf/src/application/style.css
@@ -10,5 +10,8 @@
     -fx-fill: yellow;
     -fx-text-fill: yellow;
     -fx-background-color: "#303030";
-   -fx-background-insets: 0 1 1 0 ;   
+   	-fx-background-insets: 0 1 1 0 ;   
+}
+.i-shape {
+    -fx-background-color: "aqua";
 }
