--- a/tetris_puf/src/application/GameBoard.fxml
+++ b/tetris_puf/src/application/GameBoard.fxml
@@ -1,37 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.canvas.Canvas?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 
 <AnchorPane prefHeight="434.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.MainWindowController">
    <children>
       <SplitPane dividerPositions="0.66875" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
-            <Pane minHeight="434.0" minWidth="210.0" prefWidth="212.0" styleClass="game-grid-cell">
+            <Pane maxWidth="210.0" minHeight="434.0" minWidth="210.0" prefHeight="434.0" prefWidth="210.0" styleClass="game-grid-cell">
                <children>
                   <Canvas fx:id="gameboardCanvas" height="434.0" width="210.0" />
                </children>
             </Pane>
-            <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefWidth="100.0">
+            <SplitPane dividerPositions="0.5" orientation="VERTICAL">
               <items>
-                  <Pane prefWidth="59.0" styleClass="game-grid-cell">
+                  <Pane maxHeight="210.0" prefHeight="210.0" prefWidth="112.0" styleClass="game-grid-cell">
                      <children>
-                        <Label contentDisplay="CENTER" prefHeight="26.0" prefWidth="104.0" text="Next Up" textAlignment="CENTER" textFill="#12f831" />
-                        <Button fx:id="nextUpButton" alignment="CENTER" contentDisplay="CENTER" layoutY="50.0" mnemonicParsing="false" text="NextUp" textAlignment="CENTER" />
-                        <GridPane fx:id="nextUpGrid" layoutY="81.0" prefHeight="130.0" prefWidth="104.0" styleClass="game-grid-cell">
-                           
-                        </GridPane>
+                        <Canvas fx:id="nextUpCanvas" height="210.0" width="112.0" />
+                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="30.0" prefWidth="112.0" styleClass="sidebar-headline" text="Next Up" textAlignment="CENTER" textFill="#12f831" />
                      </children>
                   </Pane>
-                  <Pane styleClass="game-grid-cell">
+                  <Pane prefWidth="112.0" styleClass="game-grid-cell">
                      <children>
-                        <Label fx:id="pointsLabel" alignment="CENTER" layoutY="45.0" prefHeight="164.0" prefWidth="104.0" styleClass="digitalLetters" text="0000" textAlignment="JUSTIFY" />
-                        <Label contentDisplay="CENTER" layoutX="-1.0" layoutY="1.0" prefHeight="33.0" prefWidth="104.0" text="Points" textAlignment="CENTER" textFill="#eb1e5c" />
+                        <Label fx:id="pointsLabel" alignment="CENTER" layoutY="1.0" prefHeight="213.0" prefWidth="112.0" styleClass="digitalLetters" text="0000" textAlignment="JUSTIFY" />
+                        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="-1.0" layoutY="1.0" prefHeight="30.0" prefWidth="112.0" styleClass="sidebar-headline" text="Score" textAlignment="CENTER" textFill="#eb1e5c" />
                      </children>
                   </Pane>
               </items>
