--- a/tetris_puf/src/application/style.css
+++ b/tetris_puf/src/application/style.css
@@ -8,11 +8,21 @@
     -fx-fill: yellow;
     -fx-text-fill: yellow;
 /*    -fx-background-color: "#303030";
-   	-fx-background-insets: 0 1 1 0 ;    */
+   	    */
 }
 
 .sidebar-headline {
 	-fx-font-weight: bold;
 	-fx-font-size: 16;
-	-fx-effect: dropshadow(gaussian, rgba(0,0,0,0.75), 10, 0, 2, 2);
+	-fx-effect: dropshadow(gaussian, rgba(0,0,0,0.75), 10, 0.5, 3, 3);
+	-fx-background-insets: 0 1 1 0 ;
+	-fx-text-fill: "#989898"
 }
+/*
+.nextup-headline {
+	-fx-text-fill: "#66FF66";
+}
+.score-headline {
+	-fx-text-fill: "#FF66B2";
+}
+*/
